--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,7 +1,59 @@
-body {
-  text-align: center;
-  color: red;
+@import "_vars";
+@import "_global";
+.header {
 }
-.box {
+.header__top {
+}
+.header__top-inner {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 90px;
+}
+.header__logo {
+}
+.header__text {
+  margin-left: auto;
+  margin-right: 25px;
+  span {
+    color: $red;
+  }
+}
+.header__btns {
+}
+.basket {
+}
+.header__btn {
+  width: 72px;
+  color: #fff;
+  font-size: 12px;
+  border-radius: 5px;
+  text-align: center;
+  line-height: 2em;
+  padding: 4px 12px;
+}
+.header__btn--login {
+  background-color: $green;
+}
+.header__btn--register {
+  background-color: $red;
+}
+.header__menu {
+  background-color: #263238;
+  min-height: 60px;
+  padding-top: 20px;
+}
+
+.header__menu-list {
+  & li + li {
+    margin-left: 35px;
+  }
+}
+.header__menu-item {
+  display: inline-block;
+}
+.header__menu-link {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
 }
