--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -57,3 +57,61 @@
   font-size: 14px;
   font-weight: 500;
 }
+
+.first {
+  min-height: 530px;
+  padding: 140px 0 100px;
+}
+
+.search__inner {
+  color: #fff;
+  text-align: center;
+  &-title {
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 1.5em;
+    margin-bottom: 20px;
+  }
+  &-intro {
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 500;
+    margin-bottom: 50px;
+  }
+  &-form {
+    max-width: 670px;
+    margin: 0 auto;
+    border-radius: 4px;
+    position: relative;
+  }
+  &-input {
+    display: inline-block;
+    width: 100%;
+    border: none;
+    height: 56px;
+    box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
+    border-radius: 4px;
+    padding-left: 25px;
+    padding-right: 60px;
+    font-size: 14px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    outline: none;
+    &:focus {
+      outline: 1px solid blue;
+    }
+    &::placeholder {
+      color: #90a4ae;
+      font-weight: 500;
+    }
+  }
+  &-btn {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: inline-block;
+    position: absolute;
+    right: 20px;
+    top: 16px;
+  }
+}
