--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -59,3 +59,12 @@ li {
     padding: 0 15px;
   }
 }
+@mixin f500 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+}
+@mixin f700 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+}
+
