--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1255,7 +1255,7 @@ section.tutorial {
       padding: 15px 0;
     }
     a.product__img {
-      height: 120px !important;
+      min-height: 120px;
     }
   }
   .product__item .product__item-info .product__item-author a + a {
@@ -1394,3 +1394,534 @@ section.tutorial {
     }
   }
 }
+//product-one end
+.product-one {
+  padding-top: 35px;
+  padding-bottom: 100px;
+  background-color: #f4f6f5;
+}
+.product-one__images {
+  max-width: 829px;
+  width: 100%;
+  height: 422px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.product-one__inner {
+  display: flex;
+}
+.product-one__content {
+  margin-right: 31px;
+  max-width: 870px;
+}
+.product-one__images-inner {
+  background-color: #fff;
+  border: 1px solid #dcdcdc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 0;
+}
+
+.product-one__title {
+  @include f500;
+  font-size: 30px;
+  color: $bg;
+  line-height: 30px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.product-one__text {
+  font-size: 14px;
+  color: #707070;
+  margin-bottom: 35px;
+  margin-top: 20px;
+}
+.product-one__box {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.product-one__link {
+  a {
+    color: #f4f6f5;
+    padding: 16px 8px;
+    width: 150px;
+    & + a {
+      margin-left: 20px;
+    }
+  }
+}
+.product-one__link-live {
+  background-color: $red;
+}
+.product-one__link-screenshot {
+  background-color: #455a64;
+}
+.product-one__link-documentation {
+  background-color: $green;
+}
+
+.product-one__social {
+  a {
+    width: 54px;
+    height: 50px;
+    position: relative;
+    &::before {
+      font-size: 18px;
+      color: #fff;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    & + a {
+      margin-left: 3px;
+    }
+  }
+}
+.icon-facebook {
+  background-color: #6370b6;
+}
+.icon-twitter {
+  background-color: #64b5f6;
+}
+.icon-linkedin {
+  background-color: #4f71ce;
+}
+.icon-pinterest-p {
+  background-color: #d32f2f;
+}
+.product-one__more-icons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.product-one__more-title {
+  font-size: 18px;
+  @include f500;
+  padding: 18px 25px;
+  background-color: #fff;
+  border: 1px solid #dcdcdc;
+  margin-bottom: 28px;
+  color: $bg;
+}
+
+.productmini {
+  margin-bottom: 27px;
+  display: flex;
+  height: 90px;
+  align-items: center;
+  max-width: 270px;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 1px 2px 0 rgba(205, 214, 222, 0.75);
+}
+
+.productmini__images {
+  width: 100px;
+  height: 90px;
+  margin-right: 20px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.productmini__name {
+  @include f500;
+  font-size: 14px;
+  color: $bg;
+  margin-bottom: 10px;
+}
+.productmini__theme {
+  color: $green;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+.productmini__price {
+  @include f700;
+  font-size: 18px;
+  color: $bg;
+}
+.product-one__tabs {
+  margin-bottom: 55px;
+}
+.tabs {
+  display: flex;
+  text-align: center;
+  border: 1px solid #d7d7d7;
+  .tab {
+    width: 100%;
+    background-color: #fff;
+    font-size: 16px;
+    color: #70838d;
+    padding: 20px 0;
+    cursor: pointer;
+    & + .tab {
+      border-left: 1px solid #d7d7d7;
+    }
+  }
+}
+.tab_content {
+  background-color: #fff;
+  border: 1px solid #d7d7d7;
+  border-top: none;
+  padding: 30px 30px 50px;
+}
+.tab-item {
+  display: none;
+  &.active-tab {
+    display: block;
+  }
+}
+
+.tab-items__list {
+  font-size: 16px;
+  line-height: 36px;
+  color: #707070;
+  column-count: 2;
+  column-gap: 25px;
+  li {
+    max-width: 270px;
+    width: 100%;
+  }
+}
+.product-one__aside {
+  max-width: 270px;
+  width: 100%;
+}
+
+.price__box {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 0;
+}
+.price__product {
+  font-size: 22px;
+  @include f500;
+  color: $red;
+}
+.product__price {
+  button {
+    width: 100%;
+    box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+    border: none;
+    margin-bottom: 7px;
+    background-color: $green;
+    color: #fff;
+    font-size: 16px;
+    padding: 17px 5px 15px;
+    background-color: $text;
+    cursor: pointer;
+    font-family: "Roboto", sans-serif !important;
+    font-weight: 700;
+    &::before {
+      font-weight: 400;
+      font-family: "icomoon";
+      padding-right: 8px;
+    }
+  }
+  .icon-heart-o {
+    background-color: $green;
+  }
+  .icon-shopping-cart {
+    background-color: #42a5f5;
+  }
+}
+.author__box {
+  display: flex;
+  padding: 25px 0;
+}
+.author__avatar {
+  margin-right: 14px;
+}
+.author__name {
+  font-size: 18px;
+  color: $bg;
+  margin-bottom: 9px;
+  line-height: 1.5;
+}
+.author__link {
+  color: #707070;
+  font-size: 13px;
+  border: 1px solid #d6d6d6;
+  padding: 6px 9px 5px;
+}
+.author__awards-list {
+  li {
+    display: inline-block;
+    text-align: center;
+    padding-top: 6px;
+    & + li {
+      margin-left: 4px;
+    }
+    &::before {
+      font-size: 20px;
+      color: #fff;
+    }
+  }
+  .icon-meh-o {
+    background-image: url("../images/awards-orange.png");
+    width: 34px;
+    height: 37px;
+  }
+  .icon-pagelines {
+    background-image: url("../images/awards-red.png");
+    width: 34px;
+    height: 37px;
+  }
+  .icon-flash {
+    background-image: url("../images/awards-blue.png");
+    width: 34px;
+    height: 37px;
+  }
+  .icon-foursquare {
+    background-image: url("../images/awards-green.png");
+    width: 34px;
+    height: 37px;
+  }
+  .icon-yen {
+    background-image: url("../images/awards-grey.png");
+    width: 34px;
+    height: 37px;
+  }
+}
+.product-one {
+  .top-sellers {
+    margin-bottom: 30px;
+  }
+}
+
+.aside__item-salesbox {
+  @include f300;
+  padding-top: 23px;
+  font-size: 16px;
+  color: #707070;
+  .aside__item-sales {
+    font-weight: 700;
+    font-size: 20px;
+    color: $bg;
+    &::before {
+      content: "\f07a";
+      font-family: "icomoon";
+      font-size: 20px;
+      color: #a6b5bb;
+      padding-right: 20px;
+    }
+  }
+}
+.information__line {
+  font-size: 14px;
+  color: $bg;
+
+  margin-bottom: 20px;
+  span {
+    color: #70838d;
+    @include f500;
+  }
+  & + .information__line {
+    margin-top: 15px;
+  }
+}
+//product-one start
+
+//start 404
+.page-404,
+.about,
+.contact {
+  background-color: #f4f6f5;
+  padding-top: 35px;
+  padding-bottom: 150px;
+}
+.page-404__wrapper,
+.contact__wrapper {
+  border: 1px solid #dcdcdc;
+}
+.page-404__head,
+.about__head,
+.contact__head {
+  background-color: #fff;
+  font-size: 24px;
+  color: #444;
+  padding: 23px 27px;
+  @include f500;
+  border-bottom: 1px solid #dcdcdc;
+}
+.page-404__inner {
+  text-align: center;
+  background-color: $green;
+  color: #fffefe;
+  padding-bottom: 20px;
+}
+.page-404__404 {
+  font-family: "Open Sans", sans-serif;
+  padding-top: 90px;
+  font-weight: 800;
+  font-size: 300px;
+  line-height: 300px;
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    background-image: url("../images/page-404.png");
+    background-repeat: no-repeat;
+    width: 160px;
+    height: 300px;
+  }
+}
+.page-404__title {
+  @include f300;
+  margin-bottom: 30px;
+  font-size: 30px;
+  letter-spacing: 0.2em;
+}
+.page-404__text {
+  font-size: 18px;
+  max-width: 520px;
+  margin: 0 auto;
+  line-height: 1.5em;
+  margin-bottom: 60px;
+}
+.page-404__link {
+  border: 1px solid #fff;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding: 20px 30px 16px;
+  border-radius: 4px;
+  color: #fff;
+  margin-bottom: 100px;
+  @include f500;
+}
+//end 404
+//start about
+.about__inner {
+  background-color: #fff;
+  padding: 40px 50px;
+  h3 {
+    margin: 0;
+    font-size: 20px;
+    @include f700;
+    color: #444;
+  }
+  p {
+  }
+}
+.about__box + .about__box {
+  margin-top: 40px;
+}
+//end about
+//start contact
+.contact__head {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+.contact__inner {
+  padding: 35px 40px 15px;
+}
+.contact__map {
+  margin-bottom: 50px;
+  iframe {
+    width: 100%;
+    height: 415px;
+  }
+}
+.contact__box {
+  display: flex;
+}
+.contact__info {
+  max-width: 330px;
+  width: 100%;
+  margin-right: 30px;
+}
+.contact__info-item {
+  margin-bottom: 30px;
+}
+.contact__info-title {
+  color: $bg;
+  position: relative;
+  padding-bottom: 20px;
+  font-size: 20px;
+  padding-left: 40px;
+  @include f500;
+  margin-bottom: 20px;
+  &::after {
+    content: "";
+    display: inline-block;
+    width: 44px;
+    height: 3px;
+    background-color: $green;
+    position: absolute;
+    bottom: 0;
+    left: 40px;
+  }
+  &::before {
+    color: $green;
+    font-size: 24px;
+    position: absolute;
+    left: 0;
+  }
+}
+.contact__info-content {
+  padding-left: 40px;
+  color: #707070;
+  max-width: 230px;
+}
+.contact__form-title {
+  font-size: 24px;
+  @include f500;
+  color: #333;
+  margin-bottom: 16px;
+}
+.contact__form-row {
+  display: flex;
+  justify-content: space-between;
+}
+.contact__form {
+  width: 100%;
+  input {
+    border: none;
+    height: 53px;
+    padding-left: 17px;
+    padding-right: 17px;
+    width: 350px;
+    margin-bottom: 30px;
+    display: block;
+    background-color: #f1f4f5;
+    &::placeholder {
+      font-size: 15px;
+      color: #7a7a7a;
+    }
+  }
+  textarea {
+    border: none;
+    outline: none;
+    background-color: #f1f4f5;
+    padding: 13px 17px;
+    display: block;
+    width: 100%;
+    resize: none;
+    height: 190px;
+    margin-bottom: 23px;
+    &::placeholder {
+      font-size: 15px;
+      color: #7a7a7a;
+    }
+  }
+  button {
+    border: none;
+    background-color: $green;
+    font-size: 16px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+    @include f700;
+    padding: 20px 30px;
+  }
+}
+.contact__wrapper {
+  background-color: #fff;
+}
+//end contact
