--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1925,3 +1925,104 @@ section.tutorial {
   background-color: #fff;
 }
 //end contact
+
+//start settings
+.settings {
+  padding-top: 35px;
+  padding-bottom: 150px;
+  background-color: #f4f6f5;
+}
+.product-one__tabs.settings__tabs {
+  display: flex;
+  .tabs {
+    max-width: 270px;
+    margin-right: 30px;
+    width: 100%;
+    border: 1px solid #dedede;
+    border-bottom: none;
+    text-align: left;
+    height: 100%;
+    span {
+      display: block;
+      background-color: #fff;
+      border-bottom: 1px solid #dedede;
+      padding: 17px 17px 17px 50px;
+      color: #707070;
+      font-size: 14px;
+      @include f500;
+      &.active {
+        border-bottom: 2px solid $green;
+        color: #37474f;
+        &::before {
+          color: $green;
+        }
+      }
+      &::before {
+        color: #444;
+        left: 24px;
+        top: 50%;
+        transform: translateY(-70%);
+      }
+    }
+  }
+  .tab_content {
+    width: 100%;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+  }
+  .tabs {
+    display: block;
+    .tab + .tab {
+      border-left: none;
+    }
+  }
+}
+.page-box {
+  background-color: #fff;
+  border: 1px solid #dedede;
+  min-height: 100%;
+}
+.page-box__title {
+  border-bottom: 1px solid #dedede;
+  padding: 18px 34px;
+  font-size: 24px;
+  @include f500;
+  color: $bg;
+}
+.page-box__content {
+  padding: 30px 35px 80px;
+}
+.settings__line {
+  margin-bottom: 21px;
+  display: flex;
+  align-items: center;
+  label {
+    max-width: 260px;
+    width: 100%;
+    color: #444;
+  }
+  input {
+    max-width: 540px;
+    width: 100%;
+    height: 40px;
+    color: #000;
+    background-color: #f9f9f9;
+    border: 1px solid #dedede;
+  }
+  .jqselect {
+    max-width: 540px;
+    width: 100%;
+    height: 40px;
+    color: #000;
+    background-color: #f9f9f9;
+    border: 1px solid #dedede;
+  }
+  .jq-selectbox.focused .jq-selectbox__select {
+    height: 40px;
+  }
+  .jq-selectbox__select {
+    height: 40px;
+  }
+}
+//end settings
