--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -636,18 +636,20 @@ a.message__img {
         color: #ef6c00;
       }
     }
-
-    a {
-    }
   }
 }
 
 section.products {
   background-color: #f4f6f5;
   padding: 110px 0;
+  max-width: 1920px;
   .mixitup-control-active {
     background: $red !important;
     color: #fff;
+  }
+  .products__inner {
+    max-width: 1920px;
+    margin: 0 auto;
   }
   h2.products__title {
   }
@@ -668,11 +670,11 @@ section.products {
       margin-left: 6px;
     }
   }
-
   .products__inner-box {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
+    margin-left: -30px;
   }
 
   .product__bottom-btns {
@@ -694,7 +696,25 @@ section.products {
     }
   }
 }
-
+.catalog {
+  .top-sellers {
+    .product__item {
+      flex-basis: auto;
+      margin-left: 0;
+    }
+  }
+}
+.header__btns {
+  z-index: 15;
+}
+.products-slider__wrapper {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+.products .product__item {
+  flex-basis: calc(25% - 30px);
+  margin-left: 30px;
+}
 .product__item {
   max-width: 440px;
   width: 100%;
@@ -1261,7 +1281,9 @@ section.tutorial {
 .catalog__categories {
   margin-bottom: 30px;
 }
-
+.catalog__products-line {
+  margin-left: 30px;
+}
 .catalog {
   padding-top: 40px;
   padding-bottom: 110px;
@@ -1379,13 +1401,14 @@ section.tutorial {
 }
 .catalog__products {
   display: flex;
-  max-width: 870px;
   flex-wrap: wrap;
-  align-items: start;
-  width: 100%;
-  justify-content: space-between;
+  max-width: 870px;
+  flex-basis: 100%;
+  justify-content: flex-start;
+  margin-left: -30px;
   .product__item {
-    max-width: 270px;
+    flex-basis: calc(33.33333% - 30px);
+    margin-left: 30px;
     a.product__img {
       min-height: 180px;
     }
@@ -1411,6 +1434,7 @@ section.tutorial {
     background: transparent;
     box-shadow: none;
     border: none;
+    width: 200px;
   }
   .jq-selectbox__select-text {
     position: relative;
@@ -1464,7 +1488,7 @@ section.tutorial {
 }
 .catalog__products {
   .product__item.product__item--line {
-    width: 100%;
+    flex-basis: 100%;
     max-width: 100%;
     a.product__img {
       min-height: 400px;
@@ -1556,7 +1580,7 @@ section.tutorial {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 16px 0;
+  padding: 16px;
 }
 
 .product-one__title {
@@ -2085,6 +2109,7 @@ section.tutorial {
   }
   .jq-selectbox {
     width: 100%;
+    max-width: 540px;
   }
   .jq-selectbox__trigger {
     border-left: none;
@@ -2586,8 +2611,7 @@ section.tutorial {
   input {
     width: 100%;
   }
-  select {
-  }
+
   .jq-selectbox__trigger {
     border-left: none;
   }
@@ -2678,9 +2702,7 @@ section.tutorial {
       color: #444;
     }
   }
-
-  &__content-pending {
-  }
 }
 
 // end withdrawals
+@import "_media";
